deploy/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gilly
  namespace: gilly
spec:
  selector:
    matchLabels:
      app: gilly
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gilly
    spec:
      dnsPolicy: Default
      hostNetwork: true
      containers:
      - name: gilly
        image: sgryczan/gilly:0.0.0
        imagePullPolicy: Always
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
        volumeMounts: 
          - mountPath: /var/run 
            name: docker-sock 
      serviceAccountName: gilly
      enableServiceLinks: true
      volumes: 
        - name: docker-sock 
          hostPath: 
              path: /var/run 

# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: gilly
#   namespace: gilly
#   labels:
#     name: gilly
# spec:
#   dnsPolicy: Default
#   hostNetwork: true
#   nodeName: hg-sre-devel-worker10
#   containers:
#   - name: gilly
#     image: sgryczan/gilly:0.0.0
#     imagePullPolicy: Always
#     securityContext:
#       privileged: true
#       capabilities:
#         add: ["NET_ADMIN"]
#     volumeMounts: 
#       - mountPath: /var/run 
#         name: docker-sock 
#   serviceAccountName: gilly
#   enableServiceLinks: true
#   volumes: 
#     - name: docker-sock 
#       hostPath: 
#           path: /var/run
