deploy/test-pod-artifactory.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-artifactory
spec:
  #nodeName: hg-sre-devel-worker10
  containers:
  - name: test-artifactory
    image: sf-artifactory.solidfire.net:9004/pixiecore-dynamic-rom:sidecar-v0.0.7
    imagePullPolicy: IfNotPresent
