deploy/test-pod-gcr.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp2
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: gcr.io/sgryczan/rocket:latest
    imagePullPolicy: IfNotPresent
