deploy/stack.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gilly
  labels:
    app: gilly
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: gilly

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gilly
  labels:
    app: gilly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gilly
  template:
    metadata:
      name: gilly
      labels:
        app: gilly
    spec:
      containers:
        - name: gilly
          image: sgryczan/gilly:0.1.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: gilly
  labels:
    app: gilly
webhooks:
  - name: gilly.gilly.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJWakNCL3FBREFnRUNBZ0VBTUFvR0NDcUdTTTQ5QkFNQ01DTXhJVEFmQmdOVkJBTU1HR3N6Y3kxelpYSjIKWlhJdFkyRkFNVFU0T0RZeU5qVTVNVEFlRncweU1EQTFNRFF5TVRBNU5URmFGdzB6TURBMU1ESXlNVEE1TlRGYQpNQ014SVRBZkJnTlZCQU1NR0dzemN5MXpaWEoyWlhJdFkyRkFNVFU0T0RZeU5qVTVNVEJaTUJNR0J5cUdTTTQ5CkFnRUdDQ3FHU000OUF3RUhBMElBQkpFYVVUa0grNFoyZjBheGFCTWFiR2ducHp1QWZHTkM3cTJWUHMyOExzUUYKRGV5b2RwU2E5eXJGVjN1U1BRNDJJbjJOQVJyckFrTHBtNnVlZ1hnZVpqR2pJekFoTUE0R0ExVWREd0VCL3dRRQpBd0lDcERBUEJn [...]
      service:
        name: gilly
        namespace: gilly
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    #namespaceSelector:
    #  matchLabels:
    #    gilly: enabled
