deploy/template.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gilly
---
apiVersion: v1
kind: Service
metadata:
  name: gilly
  namespace: gilly
  labels:
    app: gilly
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: gilly

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gilly
  namespace: gilly
  labels:
    app: gilly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gilly
  template:
    metadata:
      name: gilly
      labels:
        app: gilly
    spec:
      containers:
        - name: gilly
          image: IMAGE_REGISTRY/IMAGE_NAME:IMAGE_VERSION
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - mountPath: /go/bin/ssl
              name: certs
      volumes:
        - name:  certs
          secret:
            secretName: gilly-certs

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: gilly
  labels:
    app: gilly
webhooks:
  - name: gilly.gilly.svc.cluster.local
    clientConfig:
      caBundle: KUBE_CA_BUNDLE
      service:
        name: gilly
        namespace: gilly
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    #namespaceSelector:
    #  matchLabels:
    #    gilly: enabled
---
